frontend/test/should_fail/minmax_001.grg
using attrib_model_001;

rule r {
	nb : NBOOL;
	-eb:EBOOL->;

	if {
		nb.a == min(nb.a, eb.a);
		nb.a == max(nb.a, eb.a);
	}
	
	modify {
	}
}

